<resources>
    <string name="app_name">Quản Lý VPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="thongtin">Thông tin</string>
    <string name="vpp">Văn phòng phẩm</string>
    <string name="pb">Phòng ban</string>
    <string name="nv">Nhân viên</string>
    <string name="in">In báo cáo</string>
    <string name="cp">Cấp phát</string>
    <string name="home">Trang chính</string>

    <string name="ma">Nhập Mã</string>
    <string name="ten">Nhập Tên</string>
    <string name="ngay">Nhập Ngày sinh</string>
    <string name="nhapPB">Nhập Phòng ban</string>
    <string name="dvt">Nhập ĐVT</string>
    <string name="gia">Nhập Giá</string>

    <string name="tool">Chức năng</string>
    <string name="them">Thêm</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="ds">Danh sách</string>
    <string name="exit">Thoát</string>
    <string name="title_activity_phong_ban">PhongBanActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>