<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.NVActivity">

    <TextView
        style="@style/tieude"
        android:text="@string/nv" />

    <EditText
        android:id="@+id/txtMaNV"
        style="@style/txt"
        android:hint="@string/ma" />

    <EditText
        android:id="@+id/txtTenNV"
        style="@style/txt"
        android:hint="@string/ten" />

    <EditText
        android:id="@+id/txtNgaySinh"
        style="@style/txt"
        android:hint="@string/ngay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="fill"
            android:text=" Phòng ban"
            android:textSize="18dp">
        </TextView>

        <Spinner
            android:id="@+id/spnPB"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        style="@style/tieude"
        android:text="@string/tool" />
    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnThem"
            style="@style/btn"
            android:background="@drawable/them"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnXoa"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/them"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnSua"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/them"
            android:text="@string/sua" />

    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/ds" />

    <ListView
        android:id="@+id/lvNV"
        style="@style/lv"></ListView>
</LinearLayout>