<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".GiaoDien.ChiTietPBActivity">

    <TextView
        style="@style/tieude"
        android:text="@string/thongtin" />

    <TextView
        android:id="@+id/tvMaPB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18dp"
        android:gravity="center"></TextView>

    <EditText
        android:id="@+id/txtCTTenPB"
        style="@style/txt"
        android:hint="@string/ten" />

    <TextView
        style="@style/tieude"
        android:text="@string/tool" />

    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnXoa"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/them"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnSua"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/them"
            android:text="@string/sua" />

    </LinearLayout>
</LinearLayout>