<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.CPActivity">


    <TextView
        android:id="@+id/textView1"
        style="@style/tieude"
        android:text="@string/cpvpp" />

    <EditText
        android:id="@+id/txtMaCP"
        style="@style/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nhập Số phiếu"></EditText>

    <EditText
        android:id="@+id/txtNgayCP"
        style="@style/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nhập Ngày"></EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text=" Cấp"
            android:textSize="18dp"></TextView>

        <Spinner
            android:id="@+id/spnVPP"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <EditText
        android:id="@+id/txtSL"
        style="@style/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nhập Số lượng"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="fill"
            android:text=" Cho Nhân viên"
            android:textSize="18dp">
        </TextView>

        <Spinner
            android:id="@+id/spnNV"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        style="@style/tieude"
        android:text="@string/tool" />
    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnThem"
            style="@style/btn"
            android:background="@drawable/them"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnXoa"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/them"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnSua"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/them"
            android:text="@string/sua" />

    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/ds" />

    <ListView
        android:id="@+id/lvCP"
        style="@style/lv"></ListView>
</LinearLayout>